[package]
name = "netool"
version = "0.1.0"
edition = "2021"

[lib]
name = "netool"
path = "src/lib.rs"

[[bin]]
name = "netool-server"
path = "src/bin/server.rs"

[[bin]]
name = "netool-client"
path = "src/bin/client.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rand = "0.8"
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
